Implemented createAdmin controller and service. Fixed issues recommended by sonarCloud